--- a/README
+++ b/README
@@ -13,3 +13,7 @@ To compile and run application with ant
 	$ant build
 	$ java -cp build;lib\log4j-1.2.17.jar com.epam.koryagin.aquarium.Runner
 	
+Total working hours:
+	2013.12.09 - 2013.12.13 = 26 h (including 6h - learning subject field)
+	2014.02.02 - 2014.02.03 = 8 h
+	
